// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pool math integrity Offset multiplier behavior ASSET->USDC with +5000 bps returns 50% premium 1`] = `
Object {
  "amountIn": "10000000000000000",
  "baseOut": "10000000000000000",
  "direction": "ASSET->USDC",
  "expected": "15000000000000000",
  "label": "offset +5000 asset->usdc",
  "offsetBps": 5000,
  "quoted": "15000000000000000",
  "reserveAsset": "1000000000000000000",
  "reserveUsdc": "1000000000000000000",
}
`;

exports[`Pool math integrity Offset multiplier behavior ASSET->USDC with -5000 bps returns 50% discount 1`] = `
Object {
  "amountIn": "10000000000000000",
  "baseOut": "10000000000000000",
  "direction": "ASSET->USDC",
  "expected": "5000000000000000",
  "label": "offset -5000 asset->usdc",
  "offsetBps": -5000,
  "quoted": "5000000000000000",
  "reserveAsset": "1000000000000000000",
  "reserveUsdc": "1000000000000000000",
}
`;

exports[`Pool math integrity Offset multiplier behavior USDC->ASSET with +5000 bps returns 50% discount 1`] = `
Object {
  "amountIn": "10000000000000000",
  "baseOut": "10000000000000000",
  "direction": "USDC->ASSET",
  "expected": "5000000000000000",
  "label": "offset +5000 usdc->asset",
  "offsetBps": 5000,
  "quoted": "5000000000000000",
  "reserveAsset": "1000000000000000000",
  "reserveUsdc": "1000000000000000000",
}
`;

exports[`Pool math integrity Offset multiplier behavior USDC->ASSET with -5000 bps returns 50% premium 1`] = `
Object {
  "amountIn": "10000000000000000",
  "baseOut": "10000000000000000",
  "direction": "USDC->ASSET",
  "expected": "15000000000000000",
  "label": "offset -5000 usdc->asset",
  "offsetBps": -5000,
  "quoted": "15000000000000000",
  "reserveAsset": "1000000000000000000",
  "reserveUsdc": "1000000000000000000",
}
`;
